[metadata]
name = tchan
version = 0.1.3
description = Scrape Telegram public channels (Python library + CLI)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PythonicCafe/tchan/
keywords = telegram scraping social-media
author = Ãlvaro Justen
author_email = alvarojusten@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
py_modules = tchan
python_requires = >=3.7
install_requires =
    lxml
    requests

[options.extras_require]
cli =
    loguru
    tqdm
dev =
    autoflake
    black
    flake8
    ipython
    isort
    pytest
    twine
    wheel

[options.packages.find]
exclude =
    data*
    test*
    Makefile

[options.entry_points]
console_scripts =
    tchan = tchan:main

[flake8]
max-line-length = 80
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,docker/data/*
ignore=I001,I003,I004,E231,E501,W503
